--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <title>Студія</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
     <body>
         <!-- Шапка -->
         <header>
-            <nav>
-                <a href="./index.html" target="_self" class="logo">Web<span class="logo-header">Studio</span></a>
-                <ul class="list site-nav">
-                    <li><a href="./index.html" class="link current" target="_self">Студія</a></li>
-                    <li><a href="./portfolio.html" class="link" target="_self">Портфоліо</a></li>
-                    <li><a href="" class="link" target="_self">Контакти</a></li>
-                </ul>
-            </nav>
-            <a href="mailto:info@devstudio.com" class="contacts-header">info@devstudio.com</a><br>
-            <a href="tel:+380961111111" class="contacts-header">+38 096 111 11 11</a>
+           <div class="container">
+                <nav>
+                    <a href="./index.html" target="_self" class="logo">Web<span class="logo-header">Studio</span></a>
+                    <ul class="list site-nav">
+                        <li><a href="./index.html" class="link current" target="_self">Студія</a></li>
+                        <li><a href="./portfolio.html" class="link" target="_self">Портфоліо</a></li>
+                        <li><a href="" class="link" target="_self">Контакти</a></li>
+                    </ul>
+                </nav>
+                <a href="mailto:info@devstudio.com" class="contacts-header">info@devstudio.com</a><br>
+                <a href="tel:+380961111111" class="contacts-header">+38 096 111 11 11</a>
+           </div>
         </header>
         <main>
             <!-- Герой -->
@@ -29,78 +32,87 @@
                 <h1 class="hero-title">Ефективні рішення для<br> вашого бізнесу</h1>
                 <button type="button" class="btn-main">Замовити послугу</button>
             </section>
-            <!-- Особливості -->
+            <!-- Переваги -->
             <section class="section">
-                <h2 class="section-title">Переваги</h2>
-                <ul class="list feature-list">
-                    <li>
-                        <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                    </li>
-                    <li>
-                        <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                    </li>
-                    <li>
-                        <h3 class="title">ПЛАНУВАННЯ</h3>
-                        <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
-                    </li>
-                    <li>
-                        <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 class="section-title">Переваги</h2>
+                    <ul class="list feature-list">
+                        <li>
+                            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                            <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        </li>
+                        <li>
+                            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+                            <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        </li>
+                        <li>
+                            <h3 class="title">ПЛАНУВАННЯ</h3>
+                            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        </li>
+                        <li>
+                            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                            <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <!-- Чим ми займаємося -->
-            <section class="section">
-                <h2 class="section-title">Чим ми займаємося</h2>
-                <ul class="list">
-                    <li>
-                        <img src="./images/img1.jpg" alt="Людина набирає код на планшеті" width="370">
-                    </li>
-                    <li>
-                        <img src="./images/img2.jpg" alt="Людина з телефоном за ноутбуком" width="370">
-                    </li>
-                    <li>
-                        <img src="./images/img3.jpg" alt="Планшет з зображенням кольорової сітки" width="370">
-                    </li>
-                </ul>
+            <section class="section non-padding">
+                <div class="container">
+                    <h2 class="section-title">Чим ми займаємося</h2>
+                    <ul class="list">
+                        <li>
+                            <img src="./images/img1.jpg" alt="Людина набирає код на планшеті" width="370">
+                        </li>
+                        <li>
+                            <img src="./images/img2.jpg" alt="Людина з телефоном за ноутбуком" width="370">
+                        </li>
+                        <li>
+                            <img src="./images/img3.jpg" alt="Планшет з зображенням кольорової сітки" width="370">
+                        </li>
+                    </ul>
+                </div>
             </section>
             <!-- Команда -->
             <section class="section">
-                <h2 class="section-title">Наша команда</h2>
-                <ul class="list team">
-                    <li>
-                        <img src="./images/igor-demyanenko.jpg" alt="Ігор Дем'яненко" width="270">
-                        <h3 class="title">Ігор Дем'яненко</h3>
-                        <p class="text">Product Designer</p>
-                    </li>
-                    <li>
-                        <img src="./images/olga-repina.jpg" alt="Ольга Рєпіна" width="270">
-                        <h3 class="title">Ольга Рєпіна</h3>
-                        <p class="text">Frontend Developer</p>
-                    </li>
-                    <li>
-                        <img src="./images/mykola-tarasov.jpg" alt="Микола Тарасов" width="270">
-                        <h3 class="title">Микола Тарасов</h3>
-                        <p class="text">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/myhaylo-yermakov.jpg" alt="Михайло Єрмаков" width="270">
-                        <h3 class="title">Михайло Єрмаков</h3>
-                        <p class="text">UI Designer</p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 class="section-title">Наша команда</h2>
+                    <ul class="list team">
+                        <li>
+                            <img src="./images/igor-demyanenko.jpg" alt="Ігор Дем'яненко" width="270">
+                            <h3 class="title">Ігор Дем'яненко</h3>
+                            <p class="text">Product Designer</p>
+                        </li>
+                        <li>
+                            <img src="./images/olga-repina.jpg" alt="Ольга Рєпіна" width="270">
+                            <h3 class="title">Ольга Рєпіна</h3>
+                            <p class="text">Frontend Developer</p>
+                        </li>
+                        <li>
+                            <img src="./images/mykola-tarasov.jpg" alt="Микола Тарасов" width="270">
+                            <h3 class="title">Микола Тарасов</h3>
+                            <p class="text">Marketing</p>
+                        </li>
+                        <li>
+                            <img src="./images/myhaylo-yermakov.jpg" alt="Михайло Єрмаков" width="270">
+                            <h3 class="title">Михайло Єрмаков</h3>
+                            <p class="text">UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <!-- Футер -->
         <footer class="bg-footer">
-            <a href="./index.html" target="_self" class="logo">Web<span class="logo-footer">Studio</span></a>
-            <address>
-                <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk&authuser=0" target="_blank"  rel="noopener noreferrer" class="adr-footer">м. Київ, пр-т Лесі Українки, 26</a><br>
-                <a href="mailto:info@devstudio.com" class="contacts-footer">info@devstudio.com</a><br>
-                <a href="tel:+380961111111" class="contacts-footer">+38 096 111 11 11</a>
-            </address>
+           <div class="container">
+                <a href="./index.html" target="_self" class="logo mrg-logo">Web<span class="logo-footer">Studio</span></a>
+                <address>
+                    <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk&authuser=0"
+                        target="_blank" rel="noopener noreferrer" class="adr-footer">м. Київ, пр-т Лесі Українки, 26</a><br>
+                    <a href="mailto:info@devstudio.com" class="contacts-footer">info@devstudio.com</a><br>
+                    <a href="tel:+380961111111" class="contacts-footer">+38 096 111 11 11</a>
+                </address>
+           </div>
         </footer>
     </body>
 </html>
