--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <body>
         <!-- Шапка -->
         <header>
-           <div class="container">
-                <nav>
+           <div class="container main-nav">
+                <nav class="nav-flex">
                     <a href="./index.html" target="_self" class="logo">Web<span class="logo-header">Studio</span></a>
                     <ul class="list site-nav">
-                        <li><a href="./index.html" class="link current" target="_self">Студія</a></li>
-                        <li><a href="./portfolio.html" class="link" target="_self">Портфоліо</a></li>
-                        <li><a href="" class="link" target="_self">Контакти</a></li>
+                        <li class="item"><a href="./index.html" class="link current" target="_self">Студія</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link" target="_self">Портфоліо</a></li>
+                        <li class="item"><a href="" class="link" target="_self">Контакти</a></li>
                     </ul>
                 </nav>
-                <a href="mailto:info@devstudio.com" class="contacts-header">info@devstudio.com</a><br>
-                <a href="tel:+380961111111" class="contacts-header">+38 096 111 11 11</a>
+                <div class="contacts">
+                    <a href="mailto:info@devstudio.com" class="contacts-header">info@devstudio.com</a>
+                    <a href="tel:+380961111111" class="contacts-header">+38 096 111 11 11</a>
+                </div>
            </div>
         </header>
         <main>
@@ -37,19 +39,19 @@
                 <div class="container">
                     <h2 class="section-title">Переваги</h2>
                     <ul class="list feature-list">
-                        <li>
+                        <li class="item">
                             <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                             <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <h3 class="title">ПЛАНУВАННЯ</h3>
                             <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                             <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
@@ -60,7 +62,7 @@
             <section class="section non-padding">
                 <div class="container">
                     <h2 class="section-title">Чим ми займаємося</h2>
-                    <ul class="list">
+                    <ul class="list work-descr">
                         <li>
                             <img src="./images/img1.jpg" alt="Людина набирає код на планшеті" width="370">
                         </li>
@@ -74,26 +76,26 @@
                 </div>
             </section>
             <!-- Команда -->
-            <section class="section">
+            <section class="section team-bgcolor">
                 <div class="container">
                     <h2 class="section-title">Наша команда</h2>
                     <ul class="list team">
-                        <li>
+                        <li class="item">
                             <img src="./images/igor-demyanenko.jpg" alt="Ігор Дем'яненко" width="270">
                             <h3 class="title">Ігор Дем'яненко</h3>
                             <p class="text">Product Designer</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <img src="./images/olga-repina.jpg" alt="Ольга Рєпіна" width="270">
                             <h3 class="title">Ольга Рєпіна</h3>
                             <p class="text">Frontend Developer</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <img src="./images/mykola-tarasov.jpg" alt="Микола Тарасов" width="270">
                             <h3 class="title">Микола Тарасов</h3>
                             <p class="text">Marketing</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <img src="./images/myhaylo-yermakov.jpg" alt="Михайло Єрмаков" width="270">
                             <h3 class="title">Михайло Єрмаков</h3>
                             <p class="text">UI Designer</p>
