--- a/portfolio.html
+++ b/portfolio.html
@@ -15,71 +15,96 @@
     <body>
         <!-- Шапка -->
         <header>
-           <div class="container">
-                <nav>
+           <div class="container main-nav">
+                <nav class="nav-flex">
                     <a href="./index.html" target="_self" class="logo">Web<span class="logo-header">Studio</span></a>
                     <ul class="list site-nav">
-                        <li><a href="./index.html" class="link" target="_self">Студія</a></li>
-                        <li><a href="./portfolio.html" class="link current" target="_self">Портфоліо</a></li>
-                        <li><a href="" class="link" target="_self">Контакти</a></li>
+                        <li class="item"><a href="./index.html" class="link" target="_self">Студія</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link current" target="_self">Портфоліо</a></li>
+                        <li class="item"><a href="" class="link" target="_self">Контакти</a></li>
                     </ul>
                 </nav>
-                <a href="mailto:info@devstudio.com" class="contacts-header">info@devstudio.com</a><br>
-                <a href="tel:+380961111111" class="contacts-header">+38 096 111 11 11</a>
+                <div class="contacts">
+                    <a href="mailto:info@devstudio.com" class="contacts-header">info@devstudio.com</a>
+                    <a href="tel:+380961111111" class="contacts-header">+38 096 111 11 11</a>
+                </div>
            </div>
         </header>
         <main>
             <!-- Приклади робіт -->
-            <section class="section">
+            <section class="section header-stroke">
                 <div class="container">
                     <h1 class="section-title">Приклади робіт</h1>
-                    <ul class="list">
-                        <li><button type="button" class="btn-filter">Усі</button></li>
-                        <li><button type="button" class="btn-filter">Веб-сайти</button></li>
-                        <li><button type="button" class="btn-filter">Додатки</button></li>
-                        <li><button type="button" class="btn-filter">Дизайн</button></li>
-                        <li><button type="button" class="btn-filter">Маркетинг</button></li>
+                    <ul class="list btn-list">
+                        <li class="item"><button type="button" class="btn-filter">Усі</button></li>
+                        <li class="item"><button type="button" class="btn-filter">Додатки</button></li>
+                        <li class="item"><button type="button" class="btn-filter">Веб-сайти</button></li>
+                        <li class="item"><button type="button" class="btn-filter">Дизайн</button></li>
+                        <li class="item"><button type="button" class="btn-filter">Маркетинг</button></li>
                     </ul>
                     <ul class="list work-list">
-                        <li>
-                            <img src="./images/tehnokryak.jpg" alt="Ноутбук з вебсайтом" width="370">
-                            <h2 class="title">Технокряк</h2>
-                            <p class="text">Веб-сайт</p>
+                        <li class="item card">
+                            <img src="./images/tehnokryak.jpg" alt="Ноутбук з вебсайтом" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title">Технокряк</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./images/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                            <p class="text">Дизайн</p>
+                        <li class="item card">
+                            <img src="./images/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                                <p class="text">Дизайн</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./images/sea-food.jpg" alt="Логотип ресторану Seafood" width="370">
-                            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-                            <p class="text">Додаток</p>
+                        <li class="item card">
+                            <img src="./images/sea-food.jpg" alt="Логотип ресторану Seafood" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                                <p class="text">Додаток</p>
+                            </div>                            
                         </li>
-                        <li>
-                            <img src="./images/boxes.jpg" alt="Дві картонні коробки" width="370">
-                            <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-                            <p class="text">Додаток</p>
+                        <li class="item card">
+                            <img src="./images/prime.jpg" alt="Навушники" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title">Проєкт <span lang="en">Проєкт Prime</span></h2>
+                                <p class="text">Маркетинг</p>
+                            </div>                            
                         </li>
-                        <li>
-                            <img src="./images/inspiration.jpg" alt="Комп'ютерний монітор з відкритим сайтом" width="370">
-                            <h2 class="title"><span lang="en">Inspiration has no Borders</span></h2>
-                            <p class="text">Веб-сайт</p>
+                        <li class="item card">
+                            <img src="./images/boxes.jpg" alt="Дві картонні коробки" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
+                                <p class="text">Додаток</p>
+                            </div>                            
                         </li>
-                        <li>
-                            <img src="./images/limited-edition.jpg" alt="Відкритий журнал" width="370">
-                            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
-                            <p class="text">Дизайн</p>
+                        <li class="item card">
+                            <img src="./images/inspiration.jpg" alt="Комп'ютерний монітор з відкритим сайтом" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title"><span lang="en">Inspiration has no Borders</span></h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>                            
                         </li>
-                        <li>
-                            <img src="./images/lab.jpg" alt="Етикетка для одягу" width="370">
-                            <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-                            <p class="text">Маркетинг</p>
+                        <li class="item card">
+                            <img src="./images/limited-edition.jpg" alt="Відкритий журнал" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
+                                <p class="text">Дизайн</p>
+                            </div>                           
                         </li>
-                        <li>
-                            <img src="./images/growing-business.jpg" alt="Людина друкує на ноутбуці" width="370">
-                            <h2 class="title"><span lang="en">Growing Business</span></h2>
-                            <p class="text">Додаток</p>
+                        <li class="item card">
+                            <img src="./images/lab.jpg" alt="Етикетка для одягу" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
+                                <p class="text">Маркетинг</p>
+                            </div>                           
+                        </li>
+                        <li class="item card">
+                            <img src="./images/growing-business.jpg" alt="Людина друкує на ноутбуці" width="370" class="no-gap">
+                            <div class="border-card">
+                                <h2 class="title"><span lang="en">Growing Business</span></h2>
+                                <p class="text">Додаток</p>
+                            </div>    
                         </li>
                     </ul>
                 </div>
