виправлена картка в Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                         <li class="item card">
                             <img src="./images/prime.jpg" alt="Навушники" width="370" class="no-gap">
                             <div class="border-card">
-                                <h2 class="title">Проєкт <span lang="en">Проєкт Prime</span></h2>
+                                <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
                                 <p class="text">Маркетинг</p>
                             </div>                            
                         </li>
