--- a/index.html
+++ b/index.html
@@ -86,23 +86,31 @@
                     <ul class="list team">
                         <li class="item">
                             <img src="./images/igor-demyanenko.jpg" alt="Ігор Дем'яненко" width="270">
-                            <h3 class="title">Ігор Дем'яненко</h3>
-                            <p class="text">Product Designer</p>
+                            <div class="team-name">
+                                <h3 class="title">Ігор Дем'яненко</h3>
+                                <p class="text">Product Designer</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/olga-repina.jpg" alt="Ольга Рєпіна" width="270">
-                            <h3 class="title">Ольга Рєпіна</h3>
-                            <p class="text">Frontend Developer</p>
+                            <div class="team-name">
+                                <h3 class="title">Ольга Рєпіна</h3>
+                                <p class="text">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/mykola-tarasov.jpg" alt="Микола Тарасов" width="270">
-                            <h3 class="title">Микола Тарасов</h3>
-                            <p class="text">Marketing</p>
+                            <div class="team-name">
+                                <h3 class="title">Микола Тарасов</h3>
+                                <p class="text">Marketing</p>
+                            </div>
                         </li>
                         <li class="item">
                             <img src="./images/myhaylo-yermakov.jpg" alt="Михайло Єрмаков" width="270">
-                            <h3 class="title">Михайло Єрмаков</h3>
-                            <p class="text">UI Designer</p>
+                            <div class="team-name">
+                                <h3 class="title">Михайло Єрмаков</h3>
+                                <p class="text">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
